--- a/index.html
+++ b/index.html
@@ -1,30 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Tip Calculator </title>
-    <link href="./css/main.css" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Dice Game | CodeBustler</title>
+    <link rel="shortcut icon" href="./img/game_die.png" type="image/x-icon" />
+    <!-- CSS -->
+    <link rel="stylesheet" href="./css/main.css" />
 </head>
 
 <body>
-    <div id="p-name">
-        <h1>Tip Calculator</h1>
-        <img src="./img/moneybag.png" alt="">
-    </div>
-    <div class="container">
-        <input type="number" id="billAmount" placeholder="Enter Bill Amount" required autofocus>
-        <input type="number" id="tipPer" placeholder="Enter Tip Percentage %" required>
-        <div id="tipAmount">Tip Amount Is : </div>
-        <div id="output">Total Amount : </div>
-        <div class="btns">
-            <button onclick="tipCalculate()">Calculate</button>
-            <input type="reset" onclick="location.reload()" name="" id="">
+    <div>
+        <!-- GAME NAME -->
+        <div class="game-name">
+            <h1>Dice Game</h1>
+            <img src="./img/dice-gif.gif" alt="" />
+        </div>
+
+        <!-- PLAYERS CONTAINER -->
+        <div class="container">
+            <div class="p1">
+                <div>
+                    <p>😎 Player 1</p>
+                </div>
+                <div><img src="./img/dice6.png" alt="" /></div>
+            </div>
+
+            <div class="p2">
+                <div>
+                    <p>🤓 Player 2</p>
+                </div>
+                <div><img src="./img/dice6.png" alt="" /></div>
+            </div>
+        </div>
+
+        <!-- WINNER -->
+        <div class="winner">
+            <p class="winner-result">The Winner is</p>
+        </div>
+
+        <!-- PLAY AGAIN -->
+        <div class="play-again">
+            <p onclick="location.reload(true)">Play Now</p>
         </div>
     </div>
-    <div class="bg"> <img id="bg" src="./img/svg.png" alt=""> </div>
+
+    <p>By CodeBustler</p>
+    <!-- SCRIPT -->
     <script src="./js/script.js"></script>
 </body>
 
