--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <input type="reset" onclick="location.reload()" name="" id="">
         </div>
     </div>
-    <p id="cb"> By CodeBustler</p>
+    <p id="cb"> By EDWIN</p>
     <div class="bg"> <img id="bg" src="./img/svg3.png" alt=""> </div>
     <script src="./js/script.js"></script>
 </body>
